# move-predictor

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  start-dev.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: config.ts  index.ts
backend/src/db/: prisma.ts
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
ml/: .dockerignore  Dockerfile  pyproject.toml
ml/scripts/: create_demo_checkpoint.py  download_lichess_data.py  download_stockfish.sh  fetch_lichess_data.py  preprocess_corpus.py  smoke_test_humanization.py  train.py  train_all_brackets.sh  train_rating_bracket.sh
ml/src/: config.py  main.py
ml/src/api/: analyze.py  health.py  players.py  predict.py  review.py  training.py
ml/src/data/: dataset.py  feature_extraction.py  lichess_explorer.py  opening_book.py  player_stats.py  preprocessing.py
ml/src/data/sources/: chesscom.py  lichess.py  pgn_loader.py
ml/src/db/: crud.py  models.py  session.py
ml/src/engine/: analysis.py  stockfish_pool.py
ml/src/inference/: blind_spots.py  explainability.py  pipeline.py  sampler.py
ml/src/models/: board_encoder.py  fusion.py  heads.py  move_encoding.py  move_predictor.py  player_embedding.py  sequence_encoder.py
ml/src/training/: eval_metrics.py  losses.py  trainer.py
ml/tests/: conftest.py  test_blind_spots.py  test_model.py  test_move_encoding.py  test_preprocessing.py  test_sampler.py
(+64 files in other folders)
